fix: Handle horizontal overflow in expander

--- a/assets/sass/expander.scss
+++ b/assets/sass/expander.scss
@@ -29,6 +29,14 @@ summary {
   margin-left: 3.2rem;
 }
 
+details > div {
+  overflow-x: auto;
+}
+
+details > div > * {
+  margin-right: 1rem;
+}
+
 details > summary::-webkit-details-marker {
   display: none;
 }
